--- a/src/components/event/Event.css
+++ b/src/components/event/Event.css
@@ -23,7 +23,7 @@
   font-size: 45px;
   font-weight: 600;
   font-family: "Lato", sans-serif;
-  /* margin-top: 4rem; */
+  margin-top: 4rem;
 }
 .event-details {
   margin-top: 2rem;
@@ -67,6 +67,9 @@
   text-align: center;
   font-weight: 600;
 }
+.venue {
+  font-weight: 600;
+}
 .registration-segmant {
   color: #192f59;
   font-size: 35px;
@@ -88,4 +91,43 @@
 .reg-btn:hover {
   cursor: pointer;
   background-color: #1e5799;
+}
+
+@media screen and (max-width: 1400px) and (min-width: 1150px) {
+  .event-details {
+    padding: 2rem;
+    font-size: 22px;
+  }
+  .event-segment {
+    padding: 3rem;
+    gap: 0rem;
+  }
+  .registration-segmant {
+    padding: 2rem;
+  }
+  .reg-btn {
+    margin: 2rem;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .banner-img {
+    max-width: 100%;
+    max-height: 300px;
+    padding: 1rem;
+  }
+  .event-details {
+    padding: 1rem;
+    font-size: 18px;
+  }
+  .event-segment {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 1rem;
+  }
+  .registration-segmant {
+    padding: 1rem;
+  }
+  .reg-btn {
+    margin: 1rem;
+  }
 }
