--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,10 +1,8 @@
-/* Add the following CSS to make the navbar sticky */
 .header-section {
   background-color: #f5f5f5;
   position: fixed;
   width: 100%;
   top: 0;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
 }
 
 .header-container {
@@ -45,4 +43,48 @@
   font-size: 20px;
   font-weight: bold;
   font-family: "Lato", sans-serif;
+}
+
+@media screen and (max-width: 450px) {
+  .cse_logo {
+    height: 70px;
+    width: 70px;
+  }
+  .header-section {
+    max-width: 430px;
+  }
+  .nav-menu li {
+    margin-right: 10px;
+  }
+  .nav-menu a {
+    font-size: 12px;
+  }
+}
+
+@media screen and (max-width: 700px) and (min-width: 550px) {
+  .cse_logo {
+    height: 70px;
+    width: 70px;
+  }
+  .header-section {
+    max-width: 100%;
+  }
+  .nav-menu li {
+    margin-right: 20px;
+  }
+  .nav-menu a {
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 1150px) and (min-width: 700px) {
+  .header-section {
+    max-width: 100%;
+  }
+  .nav-menu li {
+    margin-right: 30px;
+  }
+  .nav-menu a {
+    font-size: 20px;
+  }
 }
